# OpenScholarGuard

./: .gitattributes  .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  detector_request.md  feature_request.md  rule_pack.md
.github/workflows/: ci.yml  openscholarguard-audit.yml  pages.yml  release.yml
docs/: api.md  audit.md  benchmark.md  dataset-card.md  demo.md  github.md  ingest.md  integrations.md  launch.md  paper.md  pdf-audit.md  pdf-gallery.md  rule-packs.md
examples/: injected_paper.md  openscholarguard-policy.json  rule-pack.json
scripts/: capture_demo_assets.py
src/openscholarguard/: __init__.py  __main__.py  cli.py  client.py  detectors.py  doctor.py  document.py  exceptions.py  models.py  paper.py  pdf_audit.py  pdf_gallery.py  profiles.py  reporting.py  sanitizer.py  scanner.py  text_utils.py
src/openscholarguard/audit/: __init__.py  policy.py  reporters.py  runner.py
src/openscholarguard/benchmark/: __init__.py  datasets.py  evaluator.py  generator.py  leaderboard.py  model_eval.py  models.py  publisher.py  submissions.py
src/openscholarguard/demo/: __init__.py  generator.py  html.py
src/openscholarguard/ingest/: __init__.py  chunker.py  exporters.py  models.py  pipeline.py
src/openscholarguard/integrations/: __init__.py  langchain.py  llamaindex.py
src/openscholarguard/llm/: __init__.py  audit.py  models.py  prompt.py  providers.py
src/openscholarguard/rules/: __init__.py  detector.py  fingerprint.py  models.py  registry.py  validation.py  verification.py
src/openscholarguard/server/: __init__.py  api.py  app.py  openapi.py
src/openscholarguard/site/: __init__.py  generator.py  html.py
tests/: test_audit.py  test_benchmark.py  test_cli.py  test_demo.py  test_doctor.py  test_document.py  test_ingest.py  test_integrations.py  test_llm.py  test_model_eval.py  test_paper.py  test_pdf_audit.py  test_pdf_gallery.py  test_reporting.py  test_rules.py  test_scanner.py  test_server.py  test_site.py
