[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "openscholarguard"
version = "0.1.0"
description = "Security and trust layer for AI-assisted scholarly review, PDF ingestion, and document agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenScholarGuard contributors" }
]
keywords = [
  "ai-safety",
  "ai-review",
  "document-security",
  "llm-security",
  "pdf",
  "prompt-injection",
  "rag"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
pdf = [
  "pymupdf>=1.24.0"
]
dev = [
  "build>=1.2.1",
  "pymupdf>=1.24.0",
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0"
]

[project.urls]
Homepage = "https://github.com/King-play/OpenScholarGuard"
Issues = "https://github.com/King-play/OpenScholarGuard/issues"
Source = "https://github.com/King-play/OpenScholarGuard"

[project.scripts]
openscholarguard = "openscholarguard.cli:main"
scholarguard = "openscholarguard.cli:main"
paperguard = "openscholarguard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/openscholarguard"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "N", "UP", "W"]
ignore = ["E501", "UP007", "UP045"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
packages = ["openscholarguard"]
